--- a/weitaixinpro/src/main/res/layout/settings_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/settings_fragment.xml
@@ -9,63 +9,8 @@
         android:id="@+id/head_title_id"
         layout="@layout/layout_title"/>
 
-
     <RelativeLayout
-        android:id="@+id/ll_set_system_01"
-        style="@style/wo_info_item"
-        android:layout_marginTop="15dp"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="23dp"
-            android:singleLine="true"
-            android:text="本机device ID"
-            android:textColor="@color/gray12"
-            android:textSize="@dimen/font_normal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="22dp"
-            android:text="1234567"
-            android:textColor="@color/gray12"
-            android:textSize="18dp"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/ll_set_system_02"
-        style="@style/wo_info_item"
-        android:layout_marginTop="15dp"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="23dp"
-            android:singleLine="true"
-            android:text="设备SN"
-            android:textColor="@color/gray12"
-            android:textSize="@dimen/font_normal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="22dp"
-            android:text="已绑定：1234567"
-            android:textColor="@color/gray12"
-            android:textSize="18dp"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/ll_set_system_03"
+        android:id="@+id/rl_monitor_settings"
         style="@style/wo_info_item"
         android:layout_marginTop="15dp"
         android:gravity="center_vertical">
@@ -92,7 +37,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/ll_set_system_04"
+        android:id="@+id/rl_host_id"
         style="@style/wo_info_item"
         android:layout_marginTop="15dp"
         android:gravity="center_vertical">
@@ -103,23 +48,77 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="23dp"
             android:singleLine="true"
-            android:text="关于微胎心"
+            android:text="宿主 ID"
             android:textColor="@color/gray12"
             android:textSize="@dimen/font_normal"/>
 
-        <ImageView
-            android:layout_width="10dp"
-            android:layout_height="16dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="22dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/wo_head_arrow_right"
-            android:visibility="visible"/>
+            android:text="1234567"
+            android:textColor="@color/gray12"
+            android:textSize="18dp"/>
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/ll_set_system_05"
+        android:id="@+id/rl_probe_sn"
+        style="@style/wo_info_item"
+        android:layout_marginTop="15dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="23dp"
+            android:singleLine="true"
+            android:text="探头SN"
+            android:textColor="@color/gray12"
+            android:textSize="@dimen/font_normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="22dp"
+            android:text="已绑定：1234567"
+            android:textColor="@color/gray12"
+            android:textSize="18dp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_hospital_name"
+        style="@style/wo_info_item"
+        android:layout_marginTop="15dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="23dp"
+            android:singleLine="true"
+            android:text="医院"
+            android:textColor="@color/gray12"
+            android:textSize="@dimen/font_normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="22dp"
+            android:text="交大医院"
+            android:textColor="@color/gray12"
+            android:textSize="18dp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_sections"
         style="@style/wo_info_item"
         android:layout_marginTop="15dp">
 
@@ -130,17 +129,45 @@
             android:layout_marginLeft="23dp"
             android:gravity="center"
             android:singleLine="true"
-            android:text="WIFI下自动上传"
+            android:text="科室"
             android:textColor="@drawable/text_color_hei_selector"
             android:textSize="@dimen/font_normal"/>
 
-        <ImageView
-            android:id="@+id/slide_switch_upload"
-            android:layout_width="48dip"
-            android:layout_height="30dip"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="22dp"
-            android:src="@drawable/switch_on"/>
+            android:text="一科"
+            android:textColor="@color/gray12"
+            android:textSize="18dp"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_version"
+        style="@style/wo_info_item"
+        android:layout_marginTop="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="23dp"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="版本"
+            android:textColor="@drawable/text_color_hei_selector"
+            android:textSize="@dimen/font_normal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="22dp"
+            android:text="1.0"
+            android:textColor="@color/gray12"
+            android:textSize="18dp"/>
     </RelativeLayout>
 </LinearLayout>
