--- a/weitaixinpro/src/main/res/values/colors.xml
+++ b/weitaixinpro/src/main/res/values/colors.xml
@@ -74,6 +74,8 @@
     <color name="text_color">#FF333333</color>
     <color name="text_content_color">#FF444444</color>
     <color name="text_subtitle_color">#FFA8A8A8</color>
+    <color name="transparent">#00000000</color>
+
 
 
 </resources>
