--- a/weitaixin/src/main/res/layout/activity_curve_play.xml
+++ b/weitaixin/src/main/res/layout/activity_curve_play.xml
@@ -9,64 +9,118 @@
         layout="@layout/layout_title"
         />
 
-    <cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView
-        android:id="@+id/chs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/title">
 
-        <cn.ihealthbaby.weitaixin.ui.widget.CurveMonitorDetialView
-            android:id="@+id/curve_play"
+        <cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView
+            android:id="@+id/chs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:scrollbars="none">
+
+            <cn.ihealthbaby.weitaixin.ui.widget.CurveMonitorDetialView
+                android:id="@+id/curve_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                />
+        </cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="42dp"
+            >
+
+            <TextView
+                android:id="@+id/bpm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLength="3"
+                android:text="128"
+                android:textSize="46sp"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/bpm"
+                android:orientation="vertical"
+                >
+
+                <ImageView
+                    android:id="@+id/red_heart"
+                    android:layout_width="16dp"
+                    android:layout_height="12dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@id/bpm"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/red_heart"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:singleLine="true"
+                    android:text="BPM"
+                    android:textColor="@color/red0"
+                    />
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/play"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/chs"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="26dp"
+            android:src="@drawable/button_play"
             />
-    </cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView>
 
-    <ImageView
-        android:id="@+id/play"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_below="@id/chs"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="26dp"
-        android:src="@drawable/button_play"
-        />
+        <ImageView
+            android:id="@+id/replay"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/chs"
+            android:layout_marginRight="28dp"
+            android:layout_marginTop="26dp"
+            android:src="@drawable/button_replay"/>
 
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/chs"
-        android:layout_marginRight="28dp"
-        android:layout_marginTop="26dp"
-        android:src="@drawable/button_replay"/>
-
-    <RelativeLayout
-        android:id="@+id/rl_function"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        >
-
-        <TextView
-            android:id="@+id/tv_record"
+        <RelativeLayout
+            android:id="@+id/rl_function"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="上传监测图"
-            android:textColor="@color/green0"
-            android:textSize="12sp"/>
+            android:layout_marginBottom="20dp"
+            >
 
-        <ImageView
-            android:id="@+id/btn_start"
-            android:layout_width="88dp"
-            android:layout_height="88dp"
-            android:layout_above="@id/tv_record"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/button_upload"/>
+            <TextView
+                android:id="@+id/tv_record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="上传监测图"
+                android:textColor="@color/green0"
+                android:textSize="12sp"/>
+
+            <ImageView
+                android:id="@+id/btn_start"
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:layout_above="@id/tv_record"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/button_upload"/>
+        </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
