--- a/weitaixin/src/main/res/layout/item_popo_win.xml
+++ b/weitaixin/src/main/res/layout/item_popo_win.xml
@@ -1,29 +1,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:background="@color/white0"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white0"
+    >
 
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="14dp"
         android:layout_centerInParent="true"
         android:singleLine="true"
-        android:text="5秒"
+        android:text=""
         android:textColor="@color/gray9"
-        android:textSize="@dimen/font12"/>
+        android:textSize="@dimen/font12" />
 
     <ImageView
         android:id="@+id/tvState"
         android:layout_width="12dp"
-        android:layout_centerVertical="true"
         android:layout_height="12dp"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="55dp"
         android:layout_toRightOf="@id/tvTime"
         android:src="@drawable/select"
-        android:textSize="@dimen/font26"/>
+        android:textSize="@dimen/font26" />
 
 </RelativeLayout>
