--- a/weitaixin/src/main/res/layout/activity_pay_add_address.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_add_address.xml
@@ -32,15 +32,16 @@
                 android:textSize="@dimen/font12" />
 
 
-            <TextView
+            <EditText
                 android:id="@+id/tvAddAddressName"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
+                android:singleLine="true"
                 android:layout_marginRight="14dp"
-                android:gravity="center"
-                android:text="李新宇"
+                android:gravity="right"
+                android:text=""
                 android:textColor="@color/font_color"
                 android:textSize="@dimen/font12" />
 
@@ -70,15 +71,16 @@
                 android:textSize="@dimen/font12" />
 
 
-            <TextView
+            <EditText
                 android:id="@+id/tvAddAddressPhone"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:singleLine="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="14dp"
-                android:gravity="center"
-                android:text="121312432432"
+                android:gravity="right"
+                android:text=""
                 android:textColor="@color/font_color"
                 android:textSize="@dimen/font12" />
 
@@ -186,17 +188,16 @@
                 android:textSize="@dimen/font12" />
 
 
-            <TextView
+            <EditText
                 android:id="@+id/tvAddAddressDetailAddress"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="14dp"
-                android:gravity="center"
-
+                android:gravity="right"
+                android:singleLine="true"
                 android:layout_centerVertical="true"
-
-                android:text="北京"
+                android:text=""
                 android:textColor="@color/font_color"
                 android:textSize="@dimen/font12" />
 
@@ -215,6 +216,7 @@
 
 
     <TextView
+        android:id="@+id/tvSubmitAddress"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@id/rlFak"
@@ -224,7 +226,7 @@
         android:gravity="center"
         android:text="保存并返回"
         android:background="@drawable/corner_background_green0"
-        android:textColor="@color/green0"
+        android:textColor="@drawable/text_color_green0_selector"
         android:textSize="@dimen/font12" />
 
 </RelativeLayout>
