--- a/weitaixin/src/main/res/layout/activity_pay_city_choose.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_city_choose.xml
@@ -17,6 +17,7 @@
 
         <ListView
             android:id="@+id/lvPayLeftCity"
+            android:background="@color/gray1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
