--- a/weitaixin/src/main/res/layout/item_pay_city_choose.xml
+++ b/weitaixin/src/main/res/layout/item_pay_city_choose.xml
@@ -4,16 +4,27 @@
     android:layout_height="wrap_content"
     android:background="@color/white0">
 
-
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/white0"
         android:padding="10dp"
         android:text="问医生咨询费用"
         android:gravity="center"
         android:textColor="@color/black0"
         android:textSize="@dimen/font12" />
 
+    <ImageView
+        android:id="@+id/tvState"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_marginLeft="16dp"
+        android:layout_toRightOf="@id/tvName"
+        android:layout_centerVertical="true"
+        android:src="@drawable/select"
+        android:textSize="@dimen/font26" />
 
 </RelativeLayout>
