--- a/weitaixinpro/src/main/res/layout/item_host_id.xml
+++ b/weitaixinpro/src/main/res/layout/item_host_id.xml
@@ -1,13 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="80dp">
 
-    <TextView
-        android:id="@+id/tv_host_id"
+    <ImageView
+        android:id="@+id/iv_select"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="40dp"
+        android:src="@drawable/select_on"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerVertical="true"
         android:gravity="center"
-        android:textSize="22sp"/>
-</LinearLayout>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_host_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="SN:"
+            android:textSize="22sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_host_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="北京海淀妇产医院"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:id="@+id/tv_host_department"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="第一妇产科"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:id="@+id/tv_index_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="设备编号"
+                android:textSize="12sp"/>
+        </LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
