--- a/weitaixinpro/src/main/res/layout/item_host_id.xml
+++ b/weitaixinpro/src/main/res/layout/item_host_id.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="80dp">
+                android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_select"
@@ -14,10 +14,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp">
 
         <TextView
             android:id="@+id/tv_host_id"
@@ -37,21 +39,27 @@
                 android:id="@+id/tv_host_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:text="北京海淀妇产医院"
+                android:textColor="@color/gray3"
                 android:textSize="12sp"/>
 
             <TextView
                 android:id="@+id/tv_host_department"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:text="第一妇产科"
+                android:textColor="@color/gray3"
                 android:textSize="12sp"/>
 
             <TextView
                 android:id="@+id/tv_index_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:text="设备编号"
+                android:textColor="@color/gray3"
                 android:textSize="12sp"/>
         </LinearLayout>
     </LinearLayout>
