--- a/weitaixin/src/main/res/layout/activity_pay_account.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_account.xml
@@ -43,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="42dp"
+            android:visibility="gone"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
