--- a/weitaixin/src/main/res/layout/activity_pay_affirm_payment.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_affirm_payment.xml
@@ -84,7 +84,7 @@
 
 
             <LinearLayout
-                android:id="@+id/llPaymenyTaoBao"
+                android:id="@+id/llPaymenyAlipay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
