--- a/weitaixinpro/src/main/res/layout/record_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/record_fragment.xml
@@ -4,8 +4,21 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <TextView
+    <include
+        android:id="@+id/head_title_id"
+        layout="@layout/layout_title"/>
+
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/pullToRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="记录"/>
+        android:layout_below="@id/head_title_id"
+        android:cacheColorHint="#00000000"
+        android:divider="@null"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:listSelector="#55FFFFFF"
+        android:smoothScrollbar="true"/>
 </LinearLayout>
